--- a/HW_1/myProject/pom.xml
+++ b/HW_1/myProject/pom.xml
@@ -4,6 +4,18 @@
   <groupId>ru.geekbrains</groupId>
   <artifactId>myProject</artifactId>
   <packaging>jar</packaging>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>16</source>
+          <target>16</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
   <version>1.0-SNAPSHOT</version>
   <name>myProject</name>
   <url>http://maven.apache.org</url>
@@ -14,5 +26,18 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.14.0</version>   <!-- Более новая версия, в отличии от ДЗ -->
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.10.1</version> <!-- Более новая версия, в отличии от ДЗ -->
+    </dependency>
+
   </dependencies>
 </project>
