--- a/HW_5/springHW5/pom.xml
+++ b/HW_5/springHW5/pom.xml
@@ -9,17 +9,17 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>ru.geekbrains</groupId>
-	<artifactId>springHW5</artifactId>
+	<artifactId>SpringHW5</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>springHW5</name>
-	<description>Project for Spring Boot</description>
+	<name>SpringHW5</name>
+	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jdbc</artifactId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
